@@ -16,6 +16,7 @@ Changes/New Features:
 Bug Fixes:
 
 CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
+CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()
 
 ----------------------------------
 Release: 4.1.M2
